Data issue resolved
